infra/k3s/vp/petclinic-combined.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-dep
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic-dep
  template:
    metadata:
      labels:
        app: petclinic-dep
    spec:
      containers:
      - name: petclinic-dep
        image: rustingheart/jul24-petclinic:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: 250Mi
            cpu: 500m
          limits:
            memory: 500Mi
            cpu: 1000m
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: app-volume
          mountPath: /app
      volumes:
      - name: app-volume
        hostPath:
          path: /your/specified/path  # Update to your specific path
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: default  # Change to default to match deployment
spec:
  selector:
    app: petclinic-dep
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
